# tfg-splasp

backend/: .gitignore  README.md  main.py  pyproject.toml
backend/app/: app.py  db.py  utils.py
backend/app/auth/: dependencies.py  routes.py  schemas.py  service.py
backend/app/core/: BaseRepository.py  BaseService.py  base_model_camel.py  base_repository.py  base_service.py  splasp.py
backend/app/project/: dependencies.py  models.py  repository.py  routes.py  schemas.py  service.py
backend/app/projects/: dependencies.py  models.py  repository.py  routes.py  schemas.py  service.py
backend/app/session/: dependencies.py  models.py  repository.py  routes.py  schemas.py  service.py
backend/app/user/: dependencies.py  models.py  repository.py  routes.py  schemas.py  service.py
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: AdminRoute.tsx  AnalysisResult.tsx  CreateSessionModal.tsx  NavBar.tsx  PageLayout.tsx  ProtectedRoute.tsx
frontend/src/hooks/: useAuth.ts
frontend/src/pages/: HomePage.tsx  LoginPage.tsx  RegisterPage.tsx
frontend/src/pages/admin/: SessionPages.tsx
frontend/src/pages/user/: MyProjectsPage.tsx
frontend/src/service/: api.ts  auth.service.ts  project.service.ts  session.service.ts
frontend/src/store/: authStore.ts
frontend/src/types/: auth.d.ts  project.d.ts  session.d.ts
